<resources>
    <string name="app_name">Bán Hàng Số</string>
    <string name="next">Tiếp tục</string>
    <string name="previous">Phía trước</string>
    <string name="homepage">Quản lý</string>
    <string name="transactions">Đơn hàng</string>
    <string name="product">Sản phẩm</string>
    <string name="warehouse">Kho hàng</string>
    <string name="store_name">Tên cửa hàng</string>
    <string name="txt_mocked_product_price">1.000,000 USD</string>
    <string name="txt_mocked_product_description">Ví dụ: Mì tôm hảo hảo chua cay</string>
    <string name="hint_product_name">Mỳ Hảo Hảo</string>
    <string name="hint_product_price">0.000</string>
    <string name="hint_product_brand">Acecook</string>
    <string name="hint_product_category">Mì ăn liền</string>
    <string name="attr_upload_image">Tải ảnh lên</string>
    <string name="attr_take_a_pic">Chụp ảnh</string>
    <string name="attr_product_detail">Thông tin sản phẩm</string>
    <string name="attr_product_name">Tên sản phẩm</string>
    <string name="attr_product_discount">Giá khuyến mãi</string>
    <string name="attr_product_inventory">Quản lí tồn kho</string>
    <string name="attr_product_status">Tình trạng sản phẩm</string>
    <string name="attr_product_sku">SKU</string>
    <string name="attr_product_note">Ghi chú</string>
    <string name="attr_product_description">Mô tả sản phẩm</string>
    <string name="attr_product_barcode">Barcode</string>
    <string name="scan_qr_code">Quét mã QR</string>
    <string name="attr_product_brand">Tên thương hiệu</string>
    <string name="attr_product_more_info">Thông tin khác</string>
    <string name="attr_product_out_price">Giá bán</string>
    <string name="attr_product_in_price">Giá vốn</string>
    <string name="attr_product_type">Loại sản phẩm</string>
    <string name="value_in_stock">Còn hàng</string>
    <string name="value_out_stock">Hết hàng</string>
    <string name="delete">Xóa</string>
    <string name="update">Cập nhật</string>
    <string name="error_field_is_not_nullable">Thông tin bắt buộc</string>
    <string name="asterisk">*</string>
    <string name="hint_query">Nhập nội dung tìm kiếm…</string>
    <string name="hint_query_category">Tìm tên danh mục</string>
    <string name="hint_query_brand">Tìm tên thương hiệu</string>
    <string name="tab_title_product">Sản phẩm</string>
    <string name="tab_title_category">Danh mục</string>
    <string name="tab_title_brand">Thương hiệu</string>
    <string name="currency_unit">VND</string>
    <string name="alert_product_name_non_null">Tên sản phẩm không được để trống</string>
    <string name="alter_product_name_max_chars">Tên sản phẩm không được quá 100 ký tự</string>
    <string name="alert_product_name_min_chars">Tên sản phẩm phải có ít nhất 10 ký tự</string>
    <string name="alert_product_price_non_null">Giá không được để trống</string>
    <string name="alert_product_price_invalid">Giá không hợp lệ</string>
    <string name="alert_product_discount_price_invalid">Giá giảm không được lớn hơn giá bán</string>
    <string name="alert_product_description_max_chars">Mô tả không được quá 120 ký tự</string>
    <string name="alert_product_note_max_chars">Ghi chú không được quá 50 ký tự</string>
    <string name="alert_product_purchase_price_invalid">Giá nhập không được lớn hơn giá bán</string>
    <string name="alert_exit_without_saving">Thoát không lưu?</string>
    <string name="alert_confirm_again">Có muốn chắc chắn thực hiện</string>
    <string name="agree">Đồng ý</string>
    <string name="refuse">Từ chối</string>
    <string name="alert_delete_product">Xóa sản phẩm</string>
    <string name="alert_confirm_delete">Sản phẩm này sẽ được xóa khỏi danh sách các sản phẩm trong cửu hàng của bản. Bạn có chắc rằng muốn thực hiện?</string>
    <string name="complete">Hoàn tất</string>
    <string name="alert_product_brand_non_null">Thương hiệu không được để trống</string>
    <string name="alert_product_category_non_null">Danh mục không được để trống</string>
    <string name="notify_create_product_successfully">Tạo sản phẩm thành công</string>
    <string name="notify_update_product_successfully">Cập nhật sản phẩm thành công</string>
    <string name="notify_delete_product_successfully">Xóa sản phẩm thành công</string>
    <string name="notify_create_product_fail">Tạo sản phẩm thất bại</string>
    <string name="notify_update_product_fail">Cập nh���t sản phẩm thất bại</string>
    <string name="notify_delete_product_fail">Xóa sản phẩm thất bại</string>
    <string name="attr_brand_detail">Thông tin thương hiệu</string>
    <string name="attr_brand_name">Tên thương hiệu</string>
    <string name="hint_brand_name">Acecook</string>
    <string name="alter_brand_name_non_null">Tên thương hiệu không được để trống</string>
    <string name="alter_brand_name_min_chars">Tên thương hiệu phải có ít nhất 3 ký tự</string>
    <string name="notify_brand_create_success">Tạo thương hiệu thành công</string>
    <string name="notify_create_brand_fail">Tạo thương hiệu thất bại</string>
    <string name="notify_update_brand_successful">Cập nhật thương hiệu thành công</string>
    <string name="notify_update_brand_fail">Cập nhật thương hiệu thất bại</string>
    <string name="attr_sort_selection">Kiểu sắp xếp</string>
    <string name="attr_category_detail">Thông tin danh mục</string>
    <string name="hint_category_name">Mì ăn liền</string>
    <string name="attr_category_name">Tên danh mục</string>
    <string name="alert_category_name_not_null">Tên danh mục không được để trống</string>
    <string name="alert_category_min_chars">Tên danh mục phải có ít nhất 3 ký tự</string>
    <string name="alert_category_max_chars">Tên danh mục không được vượt quá 50 ký tự</string>
    <string name="notify_category_create_success">Tạo danh mục thành công</string>
    <string name="notify_create_category_fail">Tạo danh mục thất bại</string>
    <string name="notify_category_update_success">Cập nhật danh mục thành công</string>
    <string name="notify_update_category_fail">Cập nhật danh mục thất bại</string>
    <string name="sell">Bán hàng</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="hint_phone_number">Nhập số điện thoại</string>
    <string name="hint_password">Nhập mật khẩu</string>
    <string name="password">Mật khẩu</string>
    <string name="forget_password">Quên mật khẩu?</string>
    <string name="not_an_user_yet">Bạn chưa là thành viên?</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="register">Hãy đăng ký</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="you_must_login_to_join">Bạn cần đăng nhập để sử dụng</string>
    <string name="regex_vietnam_phone_number">(\\+84|84|0)(3|5|7|8|9|1[2689])[0-9]{8}</string>
    <string name="alert_phone_number_not_null">Số điện thoại không được để trống</string>
    <string name="alert_phone_number_not_valid">Số điện thoại không hợp lệ</string>
    <string name="alert_email_not_null">Email không được để trống</string>
    <string name="alert_email_not_valid">Email không hợp lệ</string>
    <string name="regex_password">^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&amp;*-]).{8,}$</string>
    <string name="alert_password_not_valid">Mật khẩu phải có ít nhất 8 ký tự, bao gồm chữ cái và số</string>
    <string name="alert_password_not_null">Mật khẩu không được để trống</string>
    <string name="alert_confirm_password_not_null">Mật khẩu xác nhận không được để trống</string>
    <string name="alert_confirm_password_not_match">Mật khẩu xác nhận không trùng khớp</string>
    <string name="alert_otp_not_null">Mã xác thực không được để trống</string>
    <string name="regex_otp" />
    <string name="alert_otp_not_valid">Mã xác thực không chính xác</string>
    <string name="verification">MÃ XÁC THỰC</string>
    <string name="get_otp_code_with_sms">Bạn sẽ nhận được tin nhắn với mã xác thực đến số điện thoại này</string>
    <string name="enter_opt_here">Nhập mã xác thực dưới đây</string>
    <string name="resend_otp">Gửi lại mã</string>
    <string name="default_countdown">00:00</string>
    <string name="vietnam_phone_number_prefix">+84</string>
    <string name="back">trước</string>
    <string name="type_phone_number">Nhập số điện thoại</string>
    <string name="agree_with_terms_and_cons">Tôi đồng ý với Điều khoản và Điều kiện sử dụng của ứng dụng BanHangSo</string>
    <string name="already_have_account">Bạn đã có tài khoản?</string>
    <string name="type_password">Nhập mật khẩu</string>
    <string name="confirm_password">Mật khẩu xác nhận</string>
    <string name="register_account">Đăng ký tài khoản</string>
    <string name="hint_store_name">Ví dụ: Tạp hóa cô Ba</string>
    <string name="email">Địa chỉ email</string>
    <string name="additional_information">Thông tin thêm</string>
    <string name="hint_email">abc123@example.com</string>
    <string name="hint_type_email">Nhập email của bạn</string>
    <string name="or_sign_in_with">Hoặc đăng ký với</string>
    <string name="choose_sign_up_method">Chọn phương thức đăng ký tài khoản</string>
    <string name="signup_with_phone">Đăng ký bằng số điện thoại</string>
    <string name="signup_with_email">Đăng ký bằng địa chỉ email</string>
    <string name="type_email">Nhập địa chỉ email</string>
    <string name="hint_email_address">123@example.com</string>
    <string name="sign_up_successful">Đăng ký tài khoản thành công</string>
    <string name="sign_up_failed">Đăng ký tài khoản thất bại</string>
    <string name="contact_name">Tên liên hệ</string>
    <string name="hint_contact_name">Nguyễn Văn A</string>
    <string name="email_or_password_is_empty">Email hoặc mật khẩu không được để trống</string>
    <string name="more">Thêm</string>
    <string name="welcome">Xin chào,</string>
    <string name="revenue">Doanh thu</string>
    <string name="overview">Tổng quan</string>
    <string name="view_more">Xem thêm</string>
    <string name="customer">Khách hàng</string>
    <string name="today">Hôm nay</string>
    <string name="for_you">Dành cho bạn</string>
    <string name="view_all">Xem tất cả</string>
    <string name="report">Báo cáo</string>
    <string name="staff">Nhân viên</string>
    <string name="store">Cửa hàng</string>
    <string name="remember_me">Ghi nhớ tài khoản</string>
    <string name="sign_up">Đăng ký</string>
    <string name="sign_in_with_google">Đăng nhập bằng Google</string>
    <string name="or_sign_up_with">Hoặc đăng nhập với</string>
    <string name="error_auth_data_null">Dữ liệu xác thực bị thiếu. Vui lòng thử lại.</string>
    <string name="error_email_password_null">Email hoặc mật khẩu không được để trống.</string>
    <string name="error_sign_in_failed">Đăng nhập thất bại. Vui lòng kiểm tra thông tin đăng nhập của bạn và thử lại.</string>
    <string name="contact_information">Thông tin liên lạc</string>
    <string name="store_information">Thông tin cửa hàng</string>
    <string name="store_owner">Chủ quán</string>
    <string name="store_code">Mã cửa hàng</string>
    <string name="description">Mô tả</string>
    <string name="hint_store_description">Ví dụ: Chuyên bán hoa quả,…</string>
    <string name="alert_store_name_not_null">Tên cửa hàng không được để trống</string>
    <string name="alert_store_name_min_chars">Tên cửa hàng phải có ít nhất 3 ký tự</string>
    <string name="alert_store_name_max_chars">Tên cửa hàng không được quá 50 ký tự</string>
    <string name="alert_store_description_not_null">Mô tả cửa hàng không được để trống</string>
    <string name="alert_store_description_min_chars">Mô tả cửa hàng phải có ít nhất 3 ký tự</string>
    <string name="alert_store_description_max_chars">Mô tả cửa hàng không được quá 100 ký tự</string>
    <string name="alert_contact_name_not_null">Tên liên hệ không được để trống</string>
    <string name="alert_contact_name_min_chars">Tên liên hệ phải có ít nhất 3 ký tự</string>
</resources>