<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    tools:context=".ui.common.view.ExitConfirmationDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/alert_exit_without_saving"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_confirm_again"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:padding="16dp"
                android:text="@string/refuse"
                android:textColor="@color/color_text_title"
                app:cornerRadius="8dp"
                app:strokeColor="@color/color_text_title"
                app:strokeWidth="1dp" />

            <View
                android:layout_width="8dp"
                android:layout_height="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/agree"
                android:textColor="@color/white"
                app:cornerRadius="8dp" />
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>