<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.optlab.banhangso.ui.main.category.viewmodel.CategoryEditViewModel" />

        <variable
            name="fragment"
            type="com.optlab.banhangso.ui.main.category.view.CategoryEditFragment" />

        <variable
            name="isCreateMode"
            type="boolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="16dp"
                    android:text="@string/attr_category_detail"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:enabled="@{viewModel.validationState.hasError()}"
                    android:onClick="@{isCreateMode ? viewModel::onCreateButtonClick : viewModel::onUpdateButtonClick}"
                    android:text="@{isCreateMode ? @string/complete : @string/update}"
                    app:cornerRadius="8dp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/tv_title_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attr_category_name"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                    android:textColor="@color/raven"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:syncFocusColor="@{tieName}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/tv_title_name"
                    android:text="@string/asterisk"
                    android:textColor="@color/red"
                    app:layout_constraintBottom_toBottomOf="@id/tv_title_name"
                    app:layout_constraintStart_toEndOf="@id/tv_title_name" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                app:error="@{viewModel.validationState.nameError}"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_category_name"
                    android:inputType="text"
                    android:text="@={viewModel.category.name}"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</layout>
